tdf#152413: Revert "tdf#67669 - Make narrow no-break space visible by drawing

... a gray background"

This is breaking text layout involving Narrow No-Break Space because now
it goes into a portion of its own and gets laid out independent of the
surrounding text.

Lets revert this until we have a way to highlight text without breaking
text layout (e.g. tdf#61444).

This reverts:

commit bbb57e8198863ee7bdadd3f2aac4420c08da94a3
Author: Andreas Heinisch <andreas.heinisch@yahoo.de>
Date:   Wed Jul 27 08:53:11 2022 +0200

    tdf#67669 - Make narrow no-break space visible by drawing a gray background

and its followup commit:

commit 01e3c998e63fbf456e7f624adb1cae3d89ed7bb2
Author: Andreas Heinisch <andreas.heinisch@yahoo.de>
Date:   Mon Aug 22 23:02:48 2022 +0200

    tdf#67669 - Make narrow no-break space visible by drawing a gray background

Change-Id: I040a4f17d51cfea4f1e9bdcd3bc14a3bfc56b245
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143802
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>