sw/source/core/text/porfld.cxx
@@ -398,7 +398,6 @@ bool SwFieldPortion::Format( SwTextFormatInfo &rInf )
                 case CH_TAB    :
                 case CHAR_HARDHYPHEN:               // non-breaking hyphen
                 case CHAR_SOFTHYPHEN:
-                case CHAR_NNBSP:
                 case CHAR_HARDBLANK:
                 case CHAR_ZWSP :
                 case CHAR_WJ :
